# aa-workshop

./: .gitignore  README.md  WORKSHOP_GUIDE.md  pyproject.toml  validate.py
.kiro/specs/aa-workshop-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: aa-workshop.md
data/: flights.json  routes.json
docs/working-notes/: e2e-test-plan.md  workshop-validation-walkthrough.md
docs/workshop-site/: workshop.html
