[project]
name = "aa-workshop-agent"
version = "0.1.0"
description = "American Airlines Flight Operations Agent Workshop"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "networkx==3.3",
    "httpx==0.27.2",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "hypothesis==6.112.0",
    "pytest-asyncio==0.24.0",
]
deploy = [
    "aws-cdk-lib==2.160.0",
    "constructs>=10.0.0,<11.0.0",
]
neptune = [
    "gremlinpython==3.7.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests requiring AWS credentials",
]
testpaths = ["tests"]
